# ds-unidad-2-actividad-2-listasenlazadas-SofiCano

./: CMakeLists.txt  Doxyfile  README.md  main.cpp
arduino/: emisor_ptr7.ino
docs/html/: README_8md.html  annotated.html  annotated_dup.js  classListaDeCarga-members.html  classListaDeCarga.html  classListaDeCarga.js  classRotorDeMapeo-members.html  classRotorDeMapeo.html  classRotorDeMapeo.js  classTramaBase-members.html  classTramaBase.html  classTramaBase.js  classTramaLoad-members.html  classTramaLoad.html  classTramaLoad.js  classTramaMap-members.html  classTramaMap.html  classTramaMap.js  classes.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  hierarchy.html  hierarchy.js  index.html  main_8cpp.html  main_8cpp.js  main_8cpp_source.html  navtreedata.js  navtreeindex0.js  structNodoCarga-members.html  structNodoCarga.html  structNodoCarga.js  structNodoRotor-members.html  structNodoRotor.html  structNodoRotor.js
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_3.js  all_4.js  (+27 more)
docs/latex/: annotated.tex  classListaDeCarga.tex  classRotorDeMapeo.tex  classTramaBase.eps  classTramaBase.tex  classTramaLoad.eps  classTramaLoad.tex  classTramaMap.eps  classTramaMap.tex  files.tex  hierarchy.tex  index.tex  main_8cpp.tex  main_8cpp_source.tex  refman.tex  structNodoCarga.tex  structNodoRotor.tex
src/: ListaDeCarga.cpp  ListaDeCarga.h  RotorDeMapeo.cpp  RotorDeMapeo.h  SerialPort.cpp  SerialPort.h  TramaBase.h  TramaLoad.cpp  TramaLoad.h  TramaMap.cpp  TramaMap.h  main.cpp
